--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="myjscode.js"></script>
-    <title>Document</title>
+    
+    <title>Form Validation</title>
 </head>
 <body>
     <form action="" id="myForm">
-        name: <input type="text" id="name"> <br>
-        email   <input type="text" id="email"> <br>
-        password: <input type="password" id="password"> <br>
-        confirm password: <input type="password" id="confirm_password"> <br>
-        <input type="submit">
+      Name: <input type="text" id="name"> <br>
+      Email:   <input type="text" id="email"> <br>
+      Password: <input type="password" id="password"> <br>
+      Confirm Password: <input type="password" id="confirm_password"> <br>
+      <button id="button">Submit</button>
     </form>
 </body>
 </html>
