--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,10 +12,10 @@
 </head>
 <body>
     <form action="" id="myForm">
-      Name: <input type="text" id="name"> <br>
-      Email:   <input type="text" id="email"> <br>
-      Password: <input type="password" id="password"> <br>
-      Confirm Password: <input type="password" id="confirm_password"> <br>
+      Name: <input type="text" id="name">
+      Email:   <input type="text" id="email">
+      Password: <input type="password" id="password">
+      Confirm Password: <input type="password" id="confirm_password">
       <button id="button">Submit</button>
     </form>
 </body>
