--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="myjscode.js"></script>
-    
-    <title>Form Validation</title>
+    <title>Document</title>
 </head>
 <body>
     <form action="" id="myForm">
-      Name: <input type="text" id="name">
-      Email:   <input type="text" id="email">
-      Password: <input type="password" id="password">
-      Confirm Password: <input type="password" id="confirm_password">
-      <button id="button">Submit</button>
+        name: <input type="text" id="name"> <br>
+        email   <input type="text" id="email"> <br>
+        password: <input type="password" id="password"> <br>
+        confirm password: <input type="password" id="confirm_password"> <br>
+        <input type="submit">
     </form>
 </body>
 </html>
