--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="myjscode.js"></script>
     
-    <title>Document</title>
+    <title>Form Validation</title>
 </head>
 <body>
     <form action="" id="myForm" class="">
@@ -25,7 +25,7 @@
         <p>Confirm Password</p>
         <input type="password" id="confirm_password" class= "form-control">
         <button class = "btn">Submit</button>
-        
+
     </form>
 </body>
 </html>
