--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Form Validation</title>
 </head>
 <body>
-    <form action="" id="myForm" class="">
+    <form action="" id="myForm">
 
         <p>Name</p> 
         <input type="text" id="name" class="form-control">   
