--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="myjscode.js"></script>
-    
     <title>Form Validation</title>
 </head>
 <body>
-    <form action="" id="myForm">
+    <form action="#" id="myForm">
 
-        <p>Name</p> 
-        <input type="text" id="name" class="form-control">   
+        <p class = 'name-text'>Name</p> 
+        <input type="text" id="name" class="form-control">
         <p>Email</p> 
-        <input type="text" id="email" class="form-control">
-        <p>Password</p> 
+        <input type="email" id="email" class="form-control">
+        <p class="password-text">Password</p> 
         <input type="password" id="password" class= "form-control">
-        <p>Confirm Password</p>
+        <p class="confirm-password-text">Confirm Password</p>
         <input type="password" id="confirm_password" class= "form-control">
+
         <button class = "btn">Submit</button>
 
     </form>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="myjscode.js"></script>
 </body>
 </html>
