--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
 
         <p class = 'name-text'>Name</p> 
         <input type="text" id="name" class="form-control">
-        <p>Email</p> 
-        <input type="email" id="email" class="form-control">
+        <p class = 'email-text'>Email</p> 
+        <input type="email" id="email" class="form-control" required>
         <p class="password-text">Password</p> 
         <input type="password" id="password" class= "form-control">
         <p class="confirm-password-text">Confirm Password</p>
         <input type="password" id="confirm_password" class= "form-control">
 
-        <button class = "btn">Submit</button>
+        <button type = 'submit' class = "btn">Submit</button>
 
     </form>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="myjscode.js"></script>
 </body>
 </html>
